Fixed bug #36388 (ext/soap crashes when throwing exception and session persistence). (David)